# queen-fight

./: .gitignore  .gitmodules  CMakeLists.txt  JUSTIFICATION.md  README.md  assignment_justification.md  fetch_deps.ps1  fetch_deps.sh  readme.md
include/: camera.hpp  chicken3421.hpp  file_utils.hpp  gl_utils.hpp  shapes.hpp  window_utils.hpp
lib/: CMakeLists.txt  fetch_deps.sh
res/shaders/: frag.frag  frag.glsl  vert.glsl  vert.vert
src/: Car.cpp  background.cpp  cityBackground.cpp  globalState.cpp  globalState.hpp  main.cpp  queen.cpp  shapes.cpp  shapes.hpp  thrasher.cpp  userInput.hpp
src/chicken3421/: camera.cpp  error_utils.cpp  file_utils.cpp  gl_utils.cpp  model.cpp  window_utils.cpp
src/queen-fight/: background.cpp  globalState.cpp  main.cpp  queen.cpp  thrasher.cpp
src/stb-cmake/: stb_image.cpp
